# http-server-c-experimental

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
docs/: README.md
src/: data.c  data.h  http_core.c  http_core.h  http_parser.c  http_parser.h  http_server.c  server.c  util.c  util.h
tests/: CMakeLists.txt  test_http_parser.c
